--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
-  text-align: center;
+	/* width: 70%; */
+	padding: 0 10%;
+}
+h1 {
+	text-align: center;
+}
+label {
+	display: block;
+	text-align: center;
+}
+input {
+	padding: 1%;
+	border-radius: 4px;
+	border: 1px solid black;
+}
+input:focus {
+	/* border-radius: 1px; */
+	/* border: 2px solid red; */
+	/* outline: aqua thin 2px; */
+  outline: solid rgb(69, 187, 226) 2.5px;
+}
+select {
+	padding: 1%;
+	border-radius: 5px;
+	border: 1px solid black;
+}
+.information {
+	display: flex;
+	justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.email,
+.name {
+	width: 50%;
+	/* border: 2px solid black; */
+}
+#email-input,
+#name-input {
+	width: 97%;
+}
+.addresses {
+	display: flex;
+	flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.location {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.city,
+.province,
+.postal-code {
+	width: 33%;
+	/* border:2px solid black; */
+}
+#city-input,
+#provinces-input,
+#postal-code-input {
+	width: 97%;
 }
 
-.App-link {
-  color: #61dafb;
+.submit {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-button {
+	padding: 7px;
+	background-color: rgb(26, 204, 26);
+	border-radius: 7px;
+	color: white;
+}
+
+.submit-button:hover {
+	cursor: pointer;
 }
